fix spacing with promo cells

--- a/breeze.scss
+++ b/breeze.scss
@@ -1,6 +1,8 @@
 ---
 ---
 
+
+/* General CSS */
 html
 {
     font: 12px Comfortaa;
@@ -145,6 +147,8 @@ nav a:hover
     padding-top: 75px;
     padding-bottom: 75px;
     width: 272px;
+
+    margin: 15px;
 }
 
 .button
@@ -214,51 +218,6 @@ a
     padding: 30px;
 }
 
-.faqpage
-{
-    background-color: #7ce1ec;
-}
- .faqbutton
-{
-    @extend .impressionable2;
-     padding-left: 20px;
-    padding-right: 20px;
-    padding-bottom: 5px;
-    padding-top: 5px;
-     width: 650px;
-}
- .content
-{
-    padding: 10px 18px;
-    max-height: 35px;
-     background-color: white;
-    text-size: 100%;
-    text-align: left;
-    border-radius: 0px;
-    
-} 
- .question
-{
-    @extend .faqbutton;
-    cursor: pointer;
-    text-align: left;
-    
-}
-
-.question:hover
-{
-background-color: #e7e7e7;
-}
- 
-.impressionable2
-{
-    background-color: #f0f0f0;
-    border-radius: 0px;
-     box-shadow: 0px 8px 15px 4px rgba(103, 103, 103, 0.1);
-     color: black;
-    text-decoration: none;
-     transition: transform 0.3s ease, box-shadow 0.3s ease;
-}
 
 /* fonts */
 @font-face 
@@ -308,3 +267,55 @@ background-color: #e7e7e7;
       text-align: left;
     }
   }
+
+
+
+
+/* PAGE SPECIFIC CSS GOES BELOW HERE */
+
+/* FAQ page-specific CSS */
+.faqpage
+{
+    background-color: #7ce1ec;
+}
+ .faqbutton
+{
+    @extend .impressionable2;
+     padding-left: 20px;
+    padding-right: 20px;
+    padding-bottom: 5px;
+    padding-top: 5px;
+     width: 650px;
+}
+ .faqcontent
+{
+    padding: 10px 18px;
+    max-height: 35px;
+     background-color: white;
+    text-size: 100%;
+    text-align: left;
+    border-radius: 0px;
+    
+} 
+ .question
+{
+    @extend .faqbutton;
+    cursor: pointer;
+    text-align: left;
+    
+}
+
+.question:hover
+{
+background-color: #e7e7e7;
+}
+ 
+.impressionable2
+{
+    background-color: #f0f0f0;
+    border-radius: 0px;
+     box-shadow: 0px 8px 15px 4px rgba(103, 103, 103, 0.1);
+     color: black;
+    text-decoration: none;
+     transition: transform 0.3s ease, box-shadow 0.3s ease;
+}
